--- a/src/custom.scss
+++ b/src/custom.scss
@@ -103,3 +103,28 @@ $dark: black;
   color: #e9415e;
   margin-left: 5px;
 }
+
+.custom-img {
+  height: 22vw;
+  max-height: 300px;
+  border-radius: 35px;
+  border: 3px solid #e0e0e0;
+}
+
+.custom-img-preview {
+  height: 5vw;
+  border-radius: 10px;
+  border: 3px solid #e0e0e0;
+}
+
+.cmt-10 {
+  margin-top: 10px;
+}
+
+.cmt-25 {
+  margin-top: 25px;
+}
+
+.custom-padding-prod-img {
+  padding: 0px 60px;
+}
